# wolf-sound-blog

./: .editorconfig  .eleventy.js  .eleventyignore  .gitattributes  .gitignore  .htaccess  404.html  Gemfile  README.md  _Png2Webp.ps1  _config.yml  _devconfig.yml  _png2webp.sh  about.html  about.md  ads.txt  articles.md  blog.html  contact.html  cookie-policy.html  gulpfile.js  index.html  newsletter.md  package-lock.json  package.json  privacy-policy.html  pyproject.toml  robot.txt  robots.txt  staff.html  start-here.md  terms-and-conditions.html  welcome.md
_authors/: jawi.md
_data/: buildSettings.js  faq.json  navigation.yml  post_categories.json  resources.json  site.json
_drafts/: 2021-06-10-sfinae.md  2021-18-06-convolution-vs-correlation.md  2022-01-15-bilinear-transform.md  2022-01-29-alec-wright.md  2022-02-12-fir-filters-with-simd.md  2025-03-01-fm-synthesis.md  jon-fagerstrom.md
_includes/: affiliate-disclaimer.html  categories.html  cookify.html  embed-audio.html  footer.html  github-gist.liquid  google-ad.liquid  google-analytics.html  head.html  navbar.html  navigation.html  podcast_cta.liquid  post-preview.html  read_time.html  redcircle-podcast-player.liquid  scripts.html  share-buttons.html  short-bio.html  sidebar.html  sumo.html  talkyard-comments.html  youtube-video.liquid
_js/: latex-to-png.js  prism-tomorrow-night.js
_latex/: .gitignore
_layouts/: _default.html  author.html  default.html  home.html  page-no-sidebar.html  page.html  paginator.html  post.html  publication.html  redirect.html  resources.html
_posts/: 2021-06-10-sfinae.md  (+23 more)
(+495 files in other folders)
