[build-system]
requires = ["setuptools ~= 67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wolf-sound-blog"
description = "WolfSound blog Python source code (https://thewolfsound.com)"
version = "0.0.1"
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "soundfile",
    "dspyplot @ git+https://github.com/JanWilczek/dspyplot.git#egg=dspyplot",
]

[tool.setuptools]
packages = ["_py"]

